@@ -6,6 +6,8 @@ Notes: requires mongo 3.x
 
 ## v13 - 2022-04-28
 
+* freeze pyyaml (need to be upgraded)
+* freeze gunicorn (issues with python 3.7)
 * freeze redis to 3.5.3, latest breaks stuff on debian buster
 * freeze pymongo to 3.12.4 (v4 breaks some stuff)
 * update biomaj to fix deprecated isalive (no impact in docker)
